Fix messages - translation and remove not used

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -78,7 +78,6 @@ URI_malformed=Der URI hat ein falsches Format.
 _(number)=(Anzahl)
 aLazyInitializationErrorOcurred=Ein Fehler mit der Datenbankverbindung trat auf. Eventuell wurde dieser Fehler durch Verwenden des Zur\u00FCck Buttons verursacht. Sie m\u00FCssen Kitodo vermutlich neu \u00FCber den Link/URL starten
 abDerErstenMarkiertenSeite=Ab der ersten markierten Seite
-abbrechen=Abbrechen
 abgeschlosseneTasksAusListeEntfernen=Abgeschlossene Aufgaben l\u00F6schen
 addDemoTask=Beispielaufgabe hinzuf\u00FCgen
 addFilter=Filter hinzuf\u00FCgen
@@ -97,10 +96,8 @@ aktiveBenutzer=Aktive Benutzer
 aktualisierungstyp=Art der Aktualisierung
 aktuelleProzesse=Vorg\u00E4nge
 aktuelleSchritte=Meine Aufgaben
-aktuellerOrdner=Aktueller Ordner
 allActiveUsers=alle aktiven Nutzer
-alleAuswaehlen=Alle ausw\u00E4hlen
-alleSeiten=Alle Seiten
+allPages=Alle Seiten
 alleTasksAusListeEntfernen=Alle Aufgaben l\u00F6schen
 alleTrefferDieserSeiteInMeinHomeverzeichnis=Alle Treffer dieser Seite in mein Homeverzeichnis laden
 allgemeines=Allgemeines
@@ -114,11 +111,9 @@ alteSessionsAufraeumen=Alte Sessions aufr\u00E4umen
 anzahlDerArtikelUndImages=Anzahl der Artikel und Images
 anzahlDerImagesAllerTreffer=Anzahl der Images aller Treffer
 anzahlMetadatenUndImagesErmitteln=Anzahl der Metadaten und Images ermitteln
-anzeige=Anzeige
-anzeigeAnpassen=Anzeige anpassen
 applyToAllProcesses=\u00DCbernehmen f\u00FCr alle Vorg\u00E4nge dieses Batches
 applyToThisProcess=\u00DCbernehmen f\u00FCr diesen Vorgang
-arabisch=arabisch
+arabic=arabisch
 arbeitsschritt=Aufgabe
 arbeitsschritte=Abfolge der Aufgaben
 assigned=Zugewiesen
@@ -126,17 +121,15 @@ ats=ATS
 ausGruppeLoeschen=Benutzer aus der Benutzergruppe l\u00F6schen
 ausHomeverzeichnisEntfernen=Verlinkung aus Homeverzeichnis entfernen
 ausProjektLoeschen=Benutzer aus dem Projekt l\u00F6schen
-ausgabe=Ausgabe
-# ausgabename is used many times in commented part of prozess_box_Prozessdetails.xhtml
-ausgabename=Name Ausgabedatei
 ausgelagerung=Auslagerung
 ausgewaehltesStrukturelement=Ausgew\u00E4hltes Strukturelement
-auswahl=Aktionen
+actions=Aktionen
 automatic=automatisch
 automatischerDmsImport=Automatischer DMS-Export
 automaticTask=Automatische Aufgabe
-autor=Autor
+author=Autor
 available=Verf\u00fcgbar
+back=Zur\u00FCck
 batch=Batch
 # batch_type are used in getTypeTranslated of BatchService
 batch_type_logistic=Logistik
@@ -162,6 +155,7 @@ bildVerlinken=Bild verlinken
 bitteAuswaehlen=Bitte ausw\u00E4hlen
 blattzaehlung=Blattz\u00E4hlung
 blattzaehlungrectoverso=Blattz\u00E4hlung recto-verso
+blocked=Die Bearbeitung dieser Metadaten ist momentan gesperrt, da gerade ein anderer Benutzer daran arbeitet\:
 calendar.applyChanges=\u00C4nderungen \u00FCbernehmen
 calendar.applyChanges.placeholder=Der Link zum \u00DCbernehmen der \u00C4nderungen wird eingeblendet, wenn ein Eingabefeld ge\u00E4ndert wurde und die Seite aktualisiert werden kann.
 calendar.block.add=Block kopieren
@@ -218,6 +212,7 @@ calendar.upload.missingMandatoryElement=Ein erforderliches XML-Element konnte ni
 calendar.upload.missingMandatoryValue=Ein erforderlicher Wert konnte nicht gefunden werden.
 calendar.upload.overlappingDateRanges=Der Erscheinungsverlauf konnte nicht importiert werden, da sich Datumsbereiche von Bl\u00F6cken \u00FCberlappen\:
 calendar.upload.submit=Hochladen
+cancel=Abbrechen
 cannotGetDigitalDocument=Kann DigitalDocument nicht bekommen
 choice=Aktionen
 citation.accessTimestamp=Zugriff\:
@@ -267,25 +262,26 @@ createPdf=PDF erzeugen
 createXML=Export des Logfiles in das Home Verzeichnis
 createdInUserHome=Verzeichnis in Benutzerhome angelegt
 createdInUserHomeAll=Verzeichnisse in Benutzerhome angelegt
+currentFolder=Aktueller Ordner
 currentRepresentative=Aktueller Repr\u00E4sentant\:
 dataCopier.runtimeException=Fehler beim Kopieren der Daten\:
 dataCopier.syntaxError=Die Datenkopierregel hat ein falsches Format\:
-datei=Datei
+file=Datei
 dateiMitTiffHeaderSpeichern=Datei mit Tiff-Header speichern
 day=Tag
 days=Tage
+delete=L\u00F6schen
 deleteAfterMove=Nach dem Export l\u00F6schen
 deleteBatch=Den ausgew\u00E4hlten Batch l\u00F6schen
 deleteIndex=ElasticSearch Index l\u00F6schen
 deleteFromProject=Benutzer aus der Projekt l\u00F6schen
 deleteTask=Aufgabe l\u00F6schen
-dennochEinloggen=Dennoch einloggen
 details=Details
 detailsDesArbeitsschritts=Details der Aufgabe
 detailsDesSchritts=Details der Aufgabe
 detailsOfBatch=Batchdetails
 diesenSchrittAbschliessen=Die Bearbeitung dieser Aufgabe abschlie\u00DFen
-digitaleKollektionen=Digitale Kollektionen
+digitalCollections=Digitale Kollektionen
 directory=Verzeichnis
 directoryRemoved=Verzeichnis aus Benutzerhome entfernt
 directoryRemovedAll=Alle Verzeichnisse aus Benutzerhome entfernt
@@ -315,25 +311,18 @@ editDocket=Laufzettel bearbeiten
 editMetadataGroup=Metadatengruppe bearbeiten
 editTemplate=Vorlage bearbeiten
 editor=Editor
-eigenschaft=Eigenschaft
-eigenschaftBearbeiten=Eigenschaft bearbeiten
-eigenschaftHinzufuegen=Eigenschaft hinzuf\u00FCgen
-eigenschaften=Eigenschaften
 eineKopieDieserProzessvorlageAnlegen=Einen Vorgang auf Basis dieser Produktionsvorlage anlegen
 eineNeueProzessvorlageAnlegen=Eine neue Produktionsvorlage anlegen
 einenNeuenProzessAnlegen=Einen neuen Vorgang anlegen
 elasticSearchNotRunning=Der Elasticsearch Server ist nicht erreichbar.
-enddate=Enddatum
-# enterBatchName is used in BatchesAll.xhtml - lin e 53 and 88
-enterBatchName=Sie k\u00F6nnen einen Namen f\u00FCr den Batch angeben\:
-err_emailBody=Es ist ein Fehler in Kitodo aufgetreten. Erg\u00E4nzen Sie bitte hier die Meldung durch eine kurze Beschreibung, was Sie gerade in Kitodo getan haben, als dieser Fehler auftrat\:
-err_emailMessage=Um die Kitodo-Entwicklung zu unterst\u00FCtzen, k\u00F6nnen Sie eine <a href\="{0}"> E-Mail an die Entwickler </a> schicken. Bitte beschreiben Sie kurz, nach welchen Aktionen der Fehler auftrat, und wie er reproduziert werden kann. Vielen Dank\!
-err_fallBackMessage=Es gab einen Fehler in der Programmausf\u00FChrung. <br/> Leider ist das anwender- und entwicklerfreundlichere M\u00F6glichkeit der Fehlerbehandlung durch Folgelink und M\u00F6glichkeit der Fehlerbenachrichtigung per Email <br/> der Datei kitodo_config.properties abgeschaltet. <br/> <br/> Bitten Sie Ihren Administrator diese M\u00F6glichkeiten der Fehlerbehandlung in kitodo_config.properties einzustellen.
-err_linkText=Hier geht es zur\u00FCck auf die <a href\="{0}">Kitodo-Startseite</a>, evtl. m\u00FCssen Sie sich dort neu einloggen.
-err_noMailService=Die M\u00F6glichkeit von hier aus das Entwicklungsteams durch email zu benachrichtigen ist ausgeschaltet
-err_subjectLine=Kitodo Anwendungsfehler
+endDate=Enddatum
+errorEmailBody=Es ist ein Fehler in Kitodo aufgetreten. Erg\u00E4nzen Sie bitte hier die Meldung durch eine kurze Beschreibung, was Sie gerade in Kitodo getan haben, als dieser Fehler auftrat\:
+errorEmailMessage=Um die Kitodo-Entwicklung zu unterst\u00FCtzen, k\u00F6nnen Sie eine <a href\="{0}"> E-Mail an die Entwickler </a> schicken. Bitte beschreiben Sie kurz, nach welchen Aktionen der Fehler auftrat, und wie er reproduziert werden kann. Vielen Dank\!
+errorFallBackMessage=Es gab einen Fehler in der Programmausf\u00FChrung. <br/> Leider ist das anwender- und entwicklerfreundlichere M\u00F6glichkeit der Fehlerbehandlung durch Folgelink und M\u00F6glichkeit der Fehlerbenachrichtigung per Email <br/> der Datei kitodo_config.properties abgeschaltet. <br/> <br/> Bitten Sie Ihren Administrator diese M\u00F6glichkeiten der Fehlerbehandlung in kitodo_config.properties einzustellen.
+errorLinkText=Hier geht es zur\u00FCck auf die <a href\="{0}">Kitodo-Startseite</a>, evtl. m\u00FCssen Sie sich dort neu einloggen.
+errorNoMailService=Die M\u00F6glichkeit von hier aus das Entwicklungsteams durch email zu benachrichtigen ist ausgeschaltet
+errorSubjectLine=Kitodo Anwendungsfehler
 error=Fehler...
-error.IOException=Es trat ein Lese- oder Schreibfehler auf.
 error.SAXException=Die XML-Daten konnten nicht geparst werden. \u00DCberpr\u00FCfen Sie, ob die Datei wohlgeformt ist.
 error.TransformerException=Bei der Umwandlung in XML trat ein Fehler auf.
 errorAdding=Fehler beim Hinzuf\u00FCgen von ''{0}''
@@ -357,7 +346,6 @@ errorUploading=Fehler beim Hochladen von ''{0}''
 errorProjectNoTitleGiven=Kein Titel angegeben. Ein Projekt kann nicht ohne Titel gespeichert werden.
 erscheinungsjahr=Erscheinungsjahr
 erscheinungsort=Erscheinungsort
-ersteSeite=Erste Seite
 erstellungsdatum=Erstellungsdatum
 erweiterteEigenschaften=Erweiterte Eigenschaften
 esIstEinFehlerAufgetreten=Es ist ein Fehler aufgetreten
@@ -370,34 +358,31 @@ exportPdf=Export der Images zusammen mit den Metadaten als PDF-Datei in das Home
 # exportRus is used in commented pages
 exportRus=Export Rus
 extendedSearch=Erweiterte Suche
-farbschema=Farbschema
-feld=Feld
+field=Feld
 fileDownload=Datei herunterladen
 fileExists=Eine Datei mit dem Namen {0} existiert bereits. Daher kann diese Datei nicht hochgeladen werden.
 newFileName=Neuer Dateiname
 fileManipulation=Austausch von Dateien
 fileUpload=Datei hochladen
 filegroup=Dateigruppe
-filegroupBearbeiten=Dateigruppe bearbeiten
-filegroupHinzufuegen=Dateigruppe hinzuf\u00FCgen
-filegroupLoeschen=Dateigruppe l\u00F6schen
+fileGroupAdd=Dateigruppe hinzuf\u00FCgen
+fileGroupDelete=Dateigruppe l\u00F6schen
+fileGroupEdit=Dateigruppe bearbeiten
 filename=Dateiname
 filter=Filter
 filterAnpassen=Filter anpassen
 filterAnwenden=Filter anwenden
 finished=Beendet
+firstPage=Erste Seite
 folder=Validierung gegen Ordner
 folderImport=Import aus Verzeichnis
-fortschritt=Fortschritt
 from=von
-generieren=Generieren
+generate=Generieren
 gesamtesTrefferset=Gesamtes Trefferset
 gesamtesTreffersetInMeinHomeverzeichnis=Gesamtes Trefferset in mein Homeverzeichnis laden
-gesperrt=Die Bearbeitung dieser Metadaten ist momentan gesperrt, da gerade ein anderer Benutzer daran arbeitet\:
 getNormDataRecord=laden
 # getNormDataRecordFailed is used in alert in metadata.js - line 44
 getNormDataRecordFailed=Ein Fehler ist aufgetreten\:
-goBack=Zur\u00FCck
 kitodoScriptAusfuehren=KitodoScript ausf\u00FChren
 # kitodoWebseite is used in kitodo_config.properties
 kitodoWebseite=http\://www.kitodo.org/
@@ -456,8 +441,8 @@ imageVisualization=Bildanzeige
 images=Images
 imagesDurchschnitt=Images Durchschnitt
 imagesGesamt=Images gesamt
-imagesLesen=Images lesen
-imagesSchreiben=Images schreiben
+imagesRead=Images lesen
+imagesWrite=Images schreiben
 importedBatchLabel=Importiert aus {0}, {1} Uhr
 importingData=Daten werden importiert...
 importDms=Export in das DMS
@@ -468,7 +453,6 @@ importplugin=Plugin f\u00FCr den Import
 impressum=Impressum
 # impressumTextDemo is used in kitodo_config.properties
 impressumTextDemo=Dies ist eine Testinstallation von Kitodo.Production.<br/>Normalerweise steht hier das <a href="https://de.wikipedia.org/wiki/Impressum">Impressum</a>.
-inAuswahllisteAnzeigen=In Auswahlliste anzeigen
 inBearbeitungDurch=In Bearbeitung durch
 indexedEntries=Indexierte Eintr\u00E4ge
 indexing=Indexierung
@@ -476,7 +460,7 @@ insertAsUncounted=Als unnummeriert einf\u00FCgen
 insertIntoPagination=In Paginierungssequenz einf\u00FCgen
 internesSpeicherformat=Internes Speicherformat
 isInUse=befindet sich in Bearbeitung durch
-istAktiv=Benutzerkonto aktiv
+isActive=Benutzerkonto aktiv
 keinProjektAngegeben=Kein Projekt angegeben
 keinTitelAngegeben=Kein Titel angeben
 keineLdapgruppeAngegeben=Keine LDAPgruppe angegeben
@@ -497,14 +481,11 @@ lebenszeichen=Letzte Aktion vor\:
 letzteAktualisierungDurch=Letzte Aktualisierung durch
 letzteSeite=Letzte Seite
 letzterZugriff=Letzter Zugriff
-listOfIds=Liste der IDs
-listeAktualisieren=Liste aktualisieren
 loadAllProcesses=Alle Vorg\u00E4nge laden
 loadAssociatedBatchOfProcess=Die enthaltenden Batches der gew\u00E4hlten Vorg\u00E4nge ausw\u00E4hlen
 loadProcessesOfBatch=Vorg\u00E4nge des/der ausgew\u00E4hlten Batches laden
 locked=Gesperrt
 location=Standort
-loeschen=L\u00F6schen
 login=Login
 loginBereitsVergeben=Login ist bereits vergeben
 loginNotValid=Login enth\u00E4lt ung\u00FCltige Zeichen
@@ -521,6 +502,7 @@ meldungUeberProblemloesungAnNachchfolgendeStationSenden=Meldung \u00FCber Proble
 meldungUeberProblemloesungSenden=Meldung \u00FCber Probleml\u00F6sung senden
 meldungUeberProblemloesungSendenForAll=Meldung \u00FCber Probleml\u00F6sung f\u00FCr alle Schritte senden
 meldungUeberProblemloesungSendenSingle=Meldung \u00FCber Probleml\u00F6sung f\u00FCr den aktuellen Schritt senden
+messageAdd=Nachricht hinzuf\u00FCgen
 messages=Nachrichten
 metaDataError=Es gab einen schwerwiegenden Fehler in der Metadaten-Datei. M\u00F6glicherweise gingen Daten verloren. Bitte benachrichtigen Sie Ihren Administrator damit er sich dieses Problem ansehen kann.
 metadata=Metadaten
@@ -565,8 +547,6 @@ multiTiffDownloaden=Multipage-Tiff downloaden
 multipleBatchesAssigned=Dieser Vorgang ist mehreren Batches zugeordnet. Um diese Funktion zu nutzen, darf der Vorgang nur genau einem Batch zugeordnet sein.
 nachEinemBandSuchen=Vorgang suchen
 surname=Nachname
-nachrichtHinzufuegen=Nachricht hinzuf\u00FCgen
-nachrichtHinzufuegenForAll=Nachricht zu allen Prozessen hinzuf\u00FCgen
 name=Name
 neu=Neuen Datensatz anlegen
 neueBenutzergruppeAnlegen=Neue Benutzergruppe anlegen
@@ -621,23 +601,24 @@ ocr=OCR
 oderSperrungAufheben=Oder heben Sie die Sperrung hier auf.
 openSteps=Offene Schritte
 orLast=oder letzte
+order=Reihenfolge
 orderNumber=Sortiernummer
 page=Seite
 pages=Seiten
+pagination=Paginierung
+paginationEdit=Paginierung bearbeiten
 paginationFictitious=Fiktive Paginierung
 paginationFreetext=Freitext
 paginationStartValue=Paginierungsstartwert
 paginationStartValueNotSpecified=Paginierungsstartwert wurd nicht festgelegt
 paginationNoPagesSelected=Keine Seiten f\u00FCr Paginierung ausgew\u00E4hlt
 paginationScope=Paginierungsumfang
-pagination=Paginierung
-paginierungBearbeiten=Paginierung bearbeiten
-paginierungEinlesen=Paginierung anhand der Images einlesen
+paginationRead=Paginierung anhand der Images einlesen
 part=Teil
 password=Passwort
 passwordsDontMatch=Die eingegebenen Passw\u00F6rter stimmen nicht \u00FCberein!
-passwortAendern=Passwort \u00E4ndern
-passwortGeaendert=Das Passwort wurde erfolgreich ge\u00E4ndert.
+passwordChange=Passwort \u00E4ndern
+passwortChanged=Das Passwort wurde erfolgreich ge\u00E4ndert.
 path=Pfad
 personBearbeiten=Person bearbeiten
 person=Person
@@ -648,38 +629,40 @@ plugins=Plugins
 position=Position
 ppn=PPN
 prioritaet=Priorit\u00E4t
+process=Vorgang
+processData=Vorgangsdaten
+processDetails=Vorgangsdetails
+processEdit=Vorgang bearbeiten
 processList=Vorgangsliste
+processManagement=Verwaltung
 processProperties=Vorgangseigenschaft
-processTitleAllreadyInUse=Prozesstitel wird bereits verwendet.
-processesInThisBatch=Vorg\u00E4nge in diesem Batch
 processSaving=Vorgang wird gespeichert...
+processTitle=Vorgangstitel
+processTitleAlreadyInUse=Prozesstitel wird bereits verwendet.
+processes=Vorg\u00E4nge
+processesInThisBatch=Vorg\u00E4nge in diesem Batch
 progress=Fortschritt
 project=Projekt
 projectAssociation=Projektzugeh\u00F6rigkeit
 projectConfiguration=Projektkonfiguration
+projectEdit=Projekt bearbeiten
 projectIsActive=Projekt ist aktiv
 projectIsArchived=Projekt ist inaktiv
 projectList=Projektliste
 projectProgress=Projektentwicklung
-projects=Projekt
+projects=Projekte
 # projectSaving is used in projectEdit.xhtml - line 32
 projectSaving=Projekt wird gespeichert...
-projekt=Projekt
-projektBearbeiten=Projekt bearbeiten
-projekte=Projekte
+properties=Eigenschaften
 propertiesForProcessNotSaved=Eigenschaften des Prozesses {0} konnten nicht gespeichert werden.
 propertiesNotDeleted=Eigenschaften konnten nicht gel\u00F6scht werden.
 propertiesNotSaved=Eigenschaften konnten nicht gespeichert werden.
 propertiesSaved=Eigenschaften wurden gespeichert.
+property=Eigenschaft
+propertyAdd=Eigenschaft hinzuf\u00FCgen
+propertyEdit=Eigenschaft bearbeiten
 propertyNotSaved=Eigenschaft konnte nicht gespeichert werden.
 propertySaved=Eigenschaft wurde gespeichert.
-prozess=Vorgang
-prozessBearbeiten=Vorgang bearbeiten
-prozessDetails=Vorgangsdetails
-prozessTitel=Vorgangstitel
-prozessdaten=Vorgangsdaten
-prozesse=Vorg\u00E4nge
-prozessverwaltung=Verwaltung
 prozessvorlage=Produktionsvorlage
 prozessvorlageMitUnvollstaendigenSchrittdetails=Diese Vorgangsvorlage enth\u00E4lt Schritte mit unvollst\u00E4ndigen Angaben
 prozessvorlagen=Produktionsvorlagen
@@ -692,7 +675,6 @@ refCurve=Sollkurve
 regelsaetze=Regels\u00E4tze
 regelsatz=Regelsatz
 regelsatzBearbeiten=Regelsatz bearbeiten
-reihenfolge=Reihenfolge
 reload=Aktualisieren
 removeFilter=Filter entfernen
 removeFromAssociatedBatch=Selektierte Vorg\u00E4nge von ihren zugewiesenen Batches entfernen
@@ -704,8 +686,8 @@ requiredField=Mit * gekennzeichnete Felder sind Pflichtfelder
 resultPDF=Ergebnis-PDF
 resultSet=Ergebnismenge
 rights=Rechte
-roemisch=r\u00F6misch
-rolle=Rolle
+roman=r\u00F6misch
+role=Rolle
 # rulesetSaving is used in rulesetEdit.xhtml - line 39
 rulesetSaving=Regelsatz wird gespeichert...
 saveConfiguration=Konfigurationsdatei speichern
@@ -734,6 +716,7 @@ serversideDownload=Serverseitiges importieren
 serversideUpload=Serverseitiges exportieren
 setRepresentative=Repr\u00E4sentant setzen\:
 settings=Einstellungen
+showInSelectList=In Auswahlliste anzeigen
 showInactiveProjects=Deaktivierte Projekte zeigen
 showAutomaticTasks=Automatische Aufgaben anzeigen
 showClosedProcesses=Abgeschlossene Vorg\u00E4nge zeigen
@@ -742,16 +725,17 @@ sieSindBereitsEingeloggt=Sie sind bereits eingeloggt. Wie m\u00F6chten Sie vorge
 # sollDerContentWirklichGeloeschtWerden is used in onclick
 sollDerContentWirklichGeloeschtWerden=Soll der Inhalt wirklich gel\u00F6scht werden?
 sollDieserEintragWirklichGeloeschtWerden=Soll dieser Eintrag wirklich gel\u00F6scht werden?
-spaeter=Bitte versuchen Sie es in einigen Minuten erneut.
+later=Bitte versuchen Sie es in einigen Minuten erneut.
 spalteVorgangsdatumInEigenenAufgabenAnzeigen=Spalte der Vorgangsdaten in eigenen Aufgaben anzeigen
 spaltenzaehlung=Spaltenz\u00E4hlung
-speichern=Speichern
-speichernZurueck=Speichern und zur\u00FCck
+save=Speichern
+saveExit=Speichern und zur\u00FCck
+search=Suche
 spracheFuerMetadaten=Sprache f\u00FCr Metadaten
 start=Start
-startdate=Startdatum
+startDate=Startdatum
 startIndexing=Indexierung starten
-startseite=Startseite
+startPage=Startseite
 status=Status
 statusAbgeschlossen=Abgeschlossen
 statusForUsers=Zust\u00E4ndigkeit der Benutzergruppen
@@ -766,12 +750,11 @@ stepInWorkError=Der Schritt ist nicht mehr f\u00FCr die Bearbeitung offen, wahrs
 stepSaveError=Es ist ein Fehler beim Speichern des Schrittes aufgetreten.
 steps=Schritte
 stop=Stop
-strukturdaten=Strukturdaten
+structureData=Strukturdaten
 strukturdatenBearbeiten=Strukturdaten bearbeiten
-strukturelementHinzufuegen=Strukturelement hinzuf\u00FCgen
-strukturelementLoeschen=Strukturelement l\u00F6schen
+structureElementAdd=Strukturelement hinzuf\u00FCgen
+structureElementDelete=Strukturelement l\u00F6schen
 strukturelementVerschiebenErlaeuterung=W\u00E4hlen Sie nun die Stelle aus, an die das gew\u00E4hlte Strukturelement verschoben werden soll.
-suche=Suche
 suffix=Suffix
 table=Tabelle
 tableSize=Tabellengr\u00F6\u00DFe
@@ -818,7 +801,7 @@ unbekannt=Unbekannt
 # unbekannterFehler is used in commented part of error.xhtml - line 118
 unbekannterFehler=Unbekannter Fehler
 unit=Einheit
-unnummeriert=unnummeriert
+uncounted=unnummeriert
 unlocked=Entsperrt
 upload=Images hochladen
 uploadFailed=Das Hochladen ist fehlgeschlagen.
