--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -79,7 +79,6 @@ UnvollstaendigeDaten=Incomplete data\:
 _(number)=\ (number)
 aLazyInitializationErrorOcurred=An error has occurred with the database connection. This error may have been caused by using the return button of your browser. You probably have to return to Kitodo via the link/url.
 abDerErstenMarkiertenSeite=From first selected page
-abbrechen=Cancel
 abgeschlosseneTasksAusListeEntfernen=Remove finished tasks
 addDemoTask=Add sample task
 addFilter=Add new filter to list
@@ -98,10 +97,8 @@ aktiveBenutzer=Current users
 aktualisierungstyp=Update type
 aktuelleProzesse=Current processes
 aktuelleSchritte=My tasks
-aktuellerOrdner=Current folder
 allActiveUsers=All active users
-alleAuswaehlen=Select all
-alleSeiten=All pages
+allPages=All pages
 alleTasksAusListeEntfernen=Remove all tasks
 alleTrefferDieserSeiteInMeinHomeverzeichnis=Put all hits for this page in my home directory
 allgemeines=General
@@ -115,11 +112,9 @@ alteSessionsAufraeumen=Remove old sessions
 anzahlDerArtikelUndImages=Number of articles and images
 anzahlDerImagesAllerTreffer=Number of images for all hits
 anzahlMetadatenUndImagesErmitteln=Calculate number of metadata and images
-anzeige=View
-anzeigeAnpassen=Customise view
 applyToAllProcesses=Apply to all processes of the batch
 applyToThisProcess=Apply to this process
-arabisch=Arabic
+arabic=Arabic
 arbeitsschritt=Task
 arbeitsschritte=List of tasks
 assigned=Assigned
@@ -127,15 +122,15 @@ ats=ATS
 ausGruppeLoeschen=Delete user from group
 ausHomeverzeichnisEntfernen=Remove link from home directory
 ausProjektLoeschen=Remove user from project
-ausgabe=Output
 ausgelagerung=Swapping out
 ausgewaehltesStrukturelement=Selected docstruct
-auswahl=Activities
+actions=Actions
 automatic=automatic
 automatischerDmsImport=Automatic DMS export
 automaticTask=Automatic task
-autor=Author
+author=Author
 available=Available
+back=Back
 batch=batch
 # batch_type are used in getTypeTranslated of BatchService
 batch_type_logistic=logistics
@@ -161,6 +156,7 @@ bildVerlinken=Link image
 bitteAuswaehlen=Please select
 blattzaehlung=Sheet counting
 blattzaehlungrectoverso=RectoVerso Pagination
+blocked=The metadata cannot be modified at this time. Another user is working with the data\:
 calendar.applyChanges=Apply changes
 calendar.applyChanges.placeholder=The link to apply changes will become available when an input box is changed and the page can be updated.
 calendar.block.add=Further episode
@@ -217,6 +213,7 @@ calendar.upload.missingMandatoryElement=A mandatory XML element could not be fou
 calendar.upload.missingMandatoryValue=A mandatory value could not be found.
 calendar.upload.overlappingDateRanges=Due to overlapping date ranges of blocks, the course of appearance could not be imported\:
 calendar.upload.submit=Submit file
+cancel=Cancel
 cannotGetDigitalDocument=Can not get DigitalDocument
 citation.accessTimestamp=Accessed\:
 citation.containedIn=In\:
@@ -265,25 +262,26 @@ createPdf=create pdf
 createXML=Export logfile as XML file to home directory
 createdInUserHome=Folder created in user directory
 createdInUserHomeAll=Folders created in user directory
+currentFolder=Current folder
 currentRepresentative=Current representative\:
 dataCopier.runtimeException=Copying the data failed\:
 dataCopier.syntaxError=The data copying rule is malformed\:
-datei=File
+file=File
 dateiMitTiffHeaderSpeichern=Save file with tiff header
 day=day
 days=days
+delete=Delete
 deleteAfterMove=Delete after export
 deleteBatch=delete the selected batch
 deleteIndex=Delete ElasticSearch index
 deleteFromProject=Delete user from project
 deleteTask=Delete task
-dennochEinloggen=Log in anyway
 details=Details
 detailsDesArbeitsschritts=Details of the task
 detailsDesSchritts=Details of the task
 detailsOfBatch=batch details
 diesenSchrittAbschliessen=Finish this task
-digitaleKollektionen=Digital collections
+digitalCollections=Digital collections
 directory=Folder
 directoryRemoved=Removed directory from home directory
 directoryRemovedAll=Removed all folder from home directory
@@ -313,25 +311,18 @@ editDocket=edit docket
 editMetadataGroup=Edit metadata group
 editTemplate=Edit template
 editor=Editor
-eigenschaft=Property
-eigenschaftBearbeiten=Edit property
-eigenschaftHinzufuegen=Add property
-eigenschaften=Properties
 eineKopieDieserProzessvorlageAnlegen=Create process from this process template
 eineNeueProzessvorlageAnlegen=Create new process template
 einenNeuenProzessAnlegen=Create new process
 elasticSearchNotRunning=The elastic search server is not running
-enddate=End date
-# enterBatchName is used in BatchesAll.xhtml - lin e 53 and 88
-enterBatchName=You are free to enter a name for the batch\:
-err_emailBody=An error has occurred in Kitodo. Please add to this message a short description of what you were doing in Kitodo when the error occurred.
-err_emailMessage=If this error occurred for the first time you could <a href\="{0}"> send an email to the developers </a> to support the development of Kitodo. Please mind further requests for information within the email.
-err_fallBackMessage=There has been a program execution error. <br/> Unfortunately the user-friendly feature of a link provided for the continuation of work  <br/> and the e-mail bug reporting function in kitodo_config.properties is disabled or incorrectly set up. <br/> <br/> Please ask your administrator to change the settings in kitodo_config.properties to display this error in a user-friendly format. zzz
-err_linkText=You may ignore the stack trace and continue your work with a click <a href\="{0}">here</a>.<br/>If this doesn't work you may have to use the navigation or even restart the application by logging out and back in. zzz
-err_noMailService=The feature to notify the development team by email from here is disabled.
-err_subjectLine=Kitodo application error
+endDate=End date
+errorEmailBody=An error has occurred in Kitodo. Please add to this message a short description of what you were doing in Kitodo when the error occurred.
+errorEmailMessage=If this error occurred for the first time you could <a href\="{0}"> send an email to the developers </a> to support the development of Kitodo. Please mind further requests for information within the email.
+errorFallBackMessage=There has been a program execution error. <br/> Unfortunately the user-friendly feature of a link provided for the continuation of work  <br/> and the e-mail bug reporting function in kitodo_config.properties is disabled or incorrectly set up. <br/> <br/> Please ask your administrator to change the settings in kitodo_config.properties to display this error in a user-friendly format. zzz
+errorLinkText=You may ignore the stack trace and continue your work with a click <a href\="{0}">here</a>.<br/>If this doesn't work you may have to use the navigation or even restart the application by logging out and back in. zzz
+errorNoMailService=The feature to notify the development team by email from here is disabled.
+errorSubjectLine=Kitodo application error
 error=Error...
-error.IOException=An I/O exception of some sort has occurred.
 error.SAXException=Basic error while parsing the XML data. You may want to check the file for being well-formed.
 error.TransformerException=An exceptional condition occurred during the transformation process to XML.
 errorAdding=Error adding ''{0}''
@@ -355,7 +346,6 @@ errorUploading=Error uploading ''{0}''
 errorProjectNoTitleGiven=No project title was given. You cannot save a project without a title.
 erscheinungsjahr=Year of publication
 erscheinungsort=Place of publication
-ersteSeite=First page
 erstellungsdatum=Date created
 erweiterteEigenschaften=Special properties
 esIstEinFehlerAufgetreten=An error has occurred.
@@ -368,33 +358,30 @@ exportPdf=Export images with metadata as PDF file to home directory
 # exportRus is used in commented pages
 exportRus=Export Rus
 extendedSearch=Extended Search
-farbschema=Colour scheme
-feld=Field
+field=Field
 fileDownload=Download file
 fileExists=A file with the name {0} already exists. Therefore, this file can not be uploaded.
 fileManipulation=Exchange of files
 fileUpload=Upload files
 filegroup=File group
-filegroupBearbeiten=Edit file group
-filegroupHinzufuegen=Add file group
-filegroupLoeschen=Delete file group
+fileGroupAdd=Add file group
+fileGroupDelete=Delete file group
+fileGroupEdit=Edit file group
 filename=File name
 filter=Filter
 filterAnpassen=adjust filter
 filterAnwenden=Apply filter
 finished=Finished
+firstPage=First page
 folder=validation against folder
 folderImport=import from folder
-fortschritt=Progress
 from=from
-generieren=Generate
+generate=Generate
 gesamtesTrefferset=All hits
 gesamtesTreffersetInMeinHomeverzeichnis=Put all hits in my home directory
-gesperrt=The metadata cannot be modified at this time. Another user is working with the data\:
 getNormDataRecord=load
 # getNormDataRecordFailed is used in alert in metadata.js - line 44
 getNormDataRecordFailed=An error occurred\:
-goBack=Back
 kitodoScriptAusfuehren=Execute KitodoScript
 # kitodoWebseite is used in kitodo_config.properties
 kitodoWebseite=http\://www.kitodo.org/
@@ -453,8 +440,8 @@ imageSelection=Select file
 images=Images
 imagesDurchschnitt=Images average
 imagesGesamt=Images total
-imagesLesen=Read images
-imagesSchreiben=Write images
+imagesRead=Read images
+imagesWrite=Write images
 importDms=Import into DMS
 importFailedError=The import of {0} failed. The error message is\: {1}
 importFiles=Import files
@@ -465,7 +452,6 @@ importplugin=import Plugin
 impressum=Legal notice
 # impressumTextDemo is used in kitodo_config.properties
 impressumTextDemo=This is a test installation of Kitodo.Production.<br/>Normally you would find here the <a href="https://en.wikipedia.org/wiki/Impressum#Webpages">legal notice</a>.
-inAuswahllisteAnzeigen=Show in selection list
 inBearbeitungDurch=In edition by
 indexedEntries=Indexed entries
 indexing=Indexing
@@ -473,7 +459,7 @@ insertAsUncounted=Insert as uncounted
 insertIntoPagination=Paste to pagination sequence
 internesSpeicherformat=Internal file format
 isInUse=is in use of
-istAktiv=is active
+isActive=is active
 keinProjektAngegeben=no project specified
 keinTitelAngegeben=No title defined
 keineLdapgruppeAngegeben=No LDAP group defined
@@ -494,14 +480,11 @@ lebenszeichen=Last action before\:
 letzteAktualisierungDurch=Last updated by
 letzteSeite=Last page
 letzterZugriff=Last access
-listOfIds=list of IDs
-listeAktualisieren=Reload list
 loadAllProcesses=Load all processes
 loadAssociatedBatchOfProcess=Highlight the batches containing the chosen processes
 loadProcessesOfBatch=load processes of the selected batch
 locked=Locked
 location=Location
-loeschen=Delete
 login=Login
 loginBereitsVergeben=Login already in use
 loginNotValid=Login uses not valid characters
@@ -518,6 +501,7 @@ meldungUeberProblemloesungAnNachchfolgendeStationSenden=Send message about probl
 meldungUeberProblemloesungSenden=Send message about problem solution
 meldungUeberProblemloesungSendenForAll=send troubleshooting message to all steps
 meldungUeberProblemloesungSendenSingle=send troubleshooting message to the current step
+messageAdd=Add message
 messages=Messages
 metaDataError=Critical error within the metadata file with a possible loss of data. Please inform the administrator.
 metadata=Metadata
@@ -562,8 +546,6 @@ multiTiffDownloaden=Download multi-page tiff
 multipleBatchesAssigned=This process is assigned to multiple batches. To use this feature, it must be assigned to only one batch.
 nachEinemBandSuchen=Search for volume
 surname=Surname
-nachrichtHinzufuegen=Add message
-nachrichtHinzufuegenForAll=Add message to all processes
 name=Name
 neu=Create new record set
 neueBenutzergruppeAnlegen=Create new user group
@@ -619,23 +601,24 @@ objectType=Object type
 oderSperrungAufheben=Or unlock here.
 openSteps=Open steps
 orLast=or last
+order=Order
 orderNumber=number sorting
 page=Page
 pages=Pages
+pagination=Pagination
+paginationEdit=Edit pagination
 paginationFictitious=Fictitious paginating
 paginationFreetext=free text
 paginationStartValue=Pagination start value
 paginationStartValueNotSpecified=Pagination start value not specified
 paginationNoPagesSelected=No pages for pagination selected
 paginationScope=Pagination scope
-pagination=Pagination
-paginierungBearbeiten=Edit pagination
-paginierungEinlesen=Read in pagination from images
+paginationRead=Read in pagination from images
 part=part
 password=Password
 passwordsDontMatch=The passwords you entered do not match!
-passwortAendern=Change password
-passwortGeaendert=The password has been changed.
+passwordChange=Change password
+passwordChanged=The password has been changed.
 path=Path
 person=Person
 personBearbeiten=Edit person
@@ -646,37 +629,39 @@ plugins=Plugins
 position=Position
 ppn=PPN
 prioritaet=Priority
+process=Process
+processData=Process data
+processDetails=Process details
+processEdit=Edit process
 processList=Process list
+processManagement=Process management
 processProperties=process property
-processTitleAllreadyInUse=Process title already in use.
-processesInThisBatch=processes of this batch
 processSaving=Saving process...
+processTitle=Process title
+processTitleAlreadyInUse=Process title already in use.
+processes=Processes
+processesInThisBatch=processes of this batch
 progress=Progress
 project=Project
 projectAssociation=Project association
 projectConfiguration=Project configuration
 projectIsActive=project active
 projectIsArchived=project inactive
+projectEdit=Edit project
 projectList=Projects list
 projectProgress=Project progress
 projects=Projects
 projectSaving=Saving project...
-projekt=Project
-projektBearbeiten=Edit project
-projekte=Projects
+properties=Properties
 propertiesForProcessNotSaved=Properties for process {0} could not be saved.
 propertiesNotDeleted=property could not be deleted.
 propertiesNotSaved=Properties could not be saved.
 propertiesSaved=Property saved.
+property=Property
+propertyAdd=Add property
+propertyEdit=Edit property
 propertyNotSaved=Property could not be saved.
 propertySaved=Property saved.
-prozess=Process
-prozessBearbeiten=Edit process
-prozessDetails=Process details
-prozessTitel=Process title
-prozessdaten=Process data
-prozesse=Processes
-prozessverwaltung=Process management
 prozessvorlage=Process template
 prozessvorlageMitUnvollstaendigenSchrittdetails=This process template contains tasks with incomplete details.
 prozessvorlagen=Process templates
@@ -689,7 +674,6 @@ refCurve=Reference curve
 regelsaetze=Rule sets
 regelsatz=Rule set
 regelsatzBearbeiten=Edit rule set
-reihenfolge=Order
 reload=reload
 removeFilter=Remove filter from list
 removeFromAssociatedBatch=remove selected processes from assigned batches
@@ -701,8 +685,8 @@ requiredField=Fields marked with * are required
 resultPDF=Result PDF
 resultSet=Result set
 rights=Rights
-roemisch=Roman
-rolle=Role
+roman=Roman
+role=Role
 # rulesetSaving is used in rulesetEdit.xhtml - line 39
 rulesetSaving=Saving ruleset...
 saveConfiguration=Save configuration file
@@ -731,6 +715,7 @@ serversideDownload=Server side import
 serversideUpload=Server side export
 setRepresentative=Set representative\:
 settings=Settings
+showInSelectList=Show in selection list
 showInactiveProjects=show deactivated projects
 showAutomaticTasks=show automatic tasks
 showClosedProcesses=Show closed processes
@@ -739,16 +724,17 @@ sieSindBereitsEingeloggt=You are already logged in. How do you want to proceed?
 # sollDerContentWirklichGeloeschtWerden is used in onclick
 sollDerContentWirklichGeloeschtWerden=Do you really want to delete the content?
 sollDieserEintragWirklichGeloeschtWerden=Do you really want to delete this item?
-spaeter=Please try again in a few minutes.
+later=Please try again in a few minutes.
 spalteVorgangsdatumInEigenenAufgabenAnzeigen=Show process date column in user task list
 spaltenzaehlung=Column counting
-speichern=Save
-speichernZurueck=Save and exit
+save=Save
+saveExit=Save and exit
+search=Search
 spracheFuerMetadaten=Language for metadata
 start=Start
-startdate=Start date
+startDate=Start date
 startIndexing=Start indexing
-startseite=Home page
+startPage=Home page
 status=Status
 statusAbgeschlossen=Completed
 statusForUsers=Responsible user groups
@@ -763,12 +749,11 @@ stepInWorkError=Someone is already editing this step.
 stepSaveError=Step save did not work. Error has been logged.
 steps=Steps
 stop=Stop
-strukturdaten=Structure data
+structureData=Structure data
 strukturdatenBearbeiten=Edit structure data
-strukturelementHinzufuegen=Add docstruct
-strukturelementLoeschen=Delete docstruct
+structureElementAdd=Add docstruct
+structureElementDelete=Delete docstruct
 strukturelementVerschiebenErlaeuterung=Please select the node where the selected docstruct should be pasted.
-suche=Search
 suffix=Suffix
 table=Table
 tableSize=Table size
@@ -815,7 +800,7 @@ unbekannt=Unknown
 # unbekannterFehler is used in commented part of error.xhtml - line 118
 unbekannterFehler=error
 unit=unit
-unnummeriert=uncounted
+uncounted=uncounted
 unlocked=Unlocked
 upload=Upload images
 uploadFailed=Upload failed.
